--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
     max-height: 100%;
 
     background-color: #f0f0f0;
-    border: 10px solid green;
-    border-radius: 8px;
+    border: 15px solid red;
+    border-radius: 12px;
 
     position: absolute;
     left: 50%;
